force-app/main/default/objects/AI_Conversation_Turn__c/AI_Conversation_Turn__c.object-meta.xml
<CustomObject>
    <label>AI Conversation Turn</label>
    <nameField>
        <displayFormat>URN-{00000}</displayFormat>
        <label>Turn Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Conversation Turns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>