force-app/main/default/objects/AI_Conversation_Turn__c/fields/Conversation__c.field-meta.xml
<CustomField>
    <fullName>Conversation__c</fullName>
    <label>Conversation</label>
    <referenceTo>AI_Conversation__c</referenceTo>
    <relationshipLabel>AI Conversation Turns</relationshipLabel>
    <relationshipName>AI_Conversation_Turns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>