force-app/main/default/objects/AI_Conversation_Turn__c/fields/LLM_Used__c.field-meta.xml
<CustomField>
    <fullName>LLM_Used__c</fullName>
    <label>Provider Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>