force-app/main/default/objects/AI_Conversation_Turn__c/fields/Turn_Number__c.field-meta.xml
<CustomField>
    <fullName>Turn_Number__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <label>Turn Number</label>
    <type>AutoNumber</type>
</CustomField>